vault/bsc/probes/probe_loop_owned_realloc.expected.stderr
<probe>:29:5: error: memory leak of value: `p`
    }
    ^
<probe>:38:13: error: memory leak of value: `p`
            break;     // exits loop with p still owned — leak?
            ^
2 errors generated.
